--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,10 +1,42 @@
 .crystal{
     border:1px solid green;
-    height:200px;
-    width: 200px;
+    height:150px;
+    width: 150px;
+    border-radius: 1px;
+    box-shadow:5px 5px 5px rgba(0,0,0,0.5);
 }
 .crystals{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-content: center;
+    margin-top: 550px;
+}
+
+img{
+    width: 50px;
+}
+.box{ 
+    background-image: url(../images/Background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-position: fixed;
+
+    
+}
+
+#result{
+    text-align: left;
+    color:white;
+    font-size: 20px;
+
+}
+#lost{
+    color: white;
+}
+#win{
+    color: white;
+}
+#previous{
+    color:white;
 }
